DS-634 correctly left align list bullet

--- a/app/styles/_library/_objects.text.scss
+++ b/app/styles/_library/_objects.text.scss
@@ -155,7 +155,7 @@
 .o-rte-text > ul li:before {
         content: "";
         position: absolute;
-        left: calc(var(--space-4));
+        left: calc(var(--space-4) * -1);
         top: .75em;
         width: 7px;
         height: 7px;
